--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "slicker-mag",
   "private": true,
-  "homepage": "https://slickergit.github.io/slicker-mag",
+  "homepage": "https://slickergit.github.io/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
